src/pages/global.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

@tailwind base;

@layer base {
  svg {
    display: initial;
  }
}

@tailwind components;
@tailwind utilities;

* {
  font-family: 'Roboto', sans-serif;
}

.color-red {
  color: #CC0000;
}

.overflow-scrollx::-webkit-scrollbar {
  display: none;
}

